testutils/test/generated_ingresses/two_host_server_v1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-two-hosts-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
    - host: pretest.us-east.stg.containers.appdomain.cloud
